--- a/.github/workflows/using-actions.yaml
+++ b/.github/workflows/using-actions.yaml
@@ -6,7 +6,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+        
       - name: CHeckout code
         uses: actions/checkout@v4
-      - name: printing folders
-        run: ls
+      - name: setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+      - name: install dependencies
+        run: npm ci
+        working-directory: using_actions/react-app
