--- a/.github/workflows/using-actions.yaml
+++ b/.github/workflows/using-actions.yaml
@@ -5,8 +5,10 @@ on: push
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-        
+    defaults:
+      run: 
+        working-directory: using_actions/react-app
+    steps:        
       - name: CHeckout code
         uses: actions/checkout@v4
       - name: setup node
@@ -15,4 +17,5 @@ jobs:
           node-version: "20.x"
       - name: install dependencies
         run: npm ci
-        working-directory: using_actions/react-app
+      - name: Run unit tests
+        run: npm run test
