--- a/.github/workflows/15-working-with-matrices.yaml
+++ b/.github/workflows/15-working-with-matrices.yaml
@@ -17,6 +17,7 @@ jobs:
         steps:
             - name: Setup node
               uses: actions/setup-node@v3
-              with: ${{matrix.node-version}}
+              with:
+                node-version: ${{matrix.node-version}}
             - name: Perfome some tests
               run: echo "Running test on ${{matrix.os}} and NodeJs ${{matrix.node-version}}"
