--- a/.github/workflows/15-working-with-matrices.yaml
+++ b/.github/workflows/15-working-with-matrices.yaml
@@ -8,16 +8,30 @@ jobs:
         name: ${{matrix.os}}-${{matrix.node-version}}
         runs-on: ${{matrix.os}}
         strategy:
+            fail-fast: false
             matrix:
                 node-version: [18.x, 20.x, 21.x] 
                 os: 
                     - ubuntu-latest
                     - window-latest
+                include: 
+                    - os: ubuntu-latest
+                      node-version: 16.x
+                    - os: ubuntu-latest
+                      node-version: 21.x
+                      tag: experimental
 
         steps:
             - name: Setup node
               uses: actions/setup-node@v3
               with:
                 node-version: ${{matrix.node-version}}
+            - name: Fail if experimental
+              if: matrix.tag == 'experimental'
+              run: exit 1
             - name: Perfome some tests
-              run: echo "Running test on ${{matrix.os}} and NodeJs ${{matrix.node-version}}"
+              run: |
+                echo "Running test on ${{matrix.os}} and NodeJs ${{matrix.node-version}}"
+                sleep 10
+            - name: Uploading test resualts
+              run: echo "Uploading test results"
