15-matrices: include example

--- a/.github/workflows/15-working-with-matrices.yaml
+++ b/.github/workflows/15-working-with-matrices.yaml
@@ -13,7 +13,6 @@ jobs:
                 node-version: [18.x, 20.x, 21.x] 
                 os: 
                     - ubuntu-latest
-                    - window-latest
                 include: 
                     - os: ubuntu-latest
                       node-version: 16.x
@@ -35,3 +34,14 @@ jobs:
                 sleep 10
             - name: Uploading test resualts
               run: echo "Uploading test results"
+    include-example:
+        name: ${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}
+        runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                color: [red, green]
+                shape: [circle, square]
+                size: [small, large]
+                include: 
+                    - color: red
+                      shape: triangle
