--- a/.github/workflows/15-working-with-matrices.yaml
+++ b/.github/workflows/15-working-with-matrices.yaml
@@ -35,7 +35,7 @@ jobs:
             - name: Uploading test resualts
               run: echo "Uploading test results"
     include-example:
-        name: ${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}
+        name: ${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}-${{matrix.opacity}}
         runs-on: ubuntu-latest
         strategy:
             matrix:
@@ -44,7 +44,8 @@ jobs:
                 size: [small, large]
                 include: 
                     - color: red
+                    - opacity: 50
                       shape: triangle
         steps:
             - name: Dummy step
-              run: echo "${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}"
+              run: echo "${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}-${{matrix.opacity}}"
