--- a/.github/workflows/15-working-with-matrices.yaml
+++ b/.github/workflows/15-working-with-matrices.yaml
@@ -43,8 +43,12 @@ jobs:
                 shape: [circle, square]
                 size: [small, large]
                 include: 
-                    - color: red
                     - opacity: 50
+                    - color: red
+                      opacity: 75
+                    - shape: circle
+                      opacity: 100
+                    - color: red
                       shape: triangle
         steps:
             - name: Dummy step
