added exit on fail

--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -1,5 +1,5 @@
 name: 01-building-blocks
-on: push
+on: workflow_dispatch
 jobs:
     echo-hello:
         runs-on: ubuntu-latest
@@ -10,6 +10,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Failed step
-              run: echo "I will fail"
+              run: |
+                echo "I will fail"
+                exit 1
             - name: Say goodbye
               run: echo "Goodbye!"
