fix for 03 - Workflow Runners

--- a/.github/workflows/03-workflow-runners.yaml
+++ b/.github/workflows/03-workflow-runners.yaml
@@ -2,7 +2,7 @@ name: 03 - Workflow Runners
 on: push
 jobs:
     ubuntu-echo:
-        runs-on: ubuntu-loatest
+        runs-on: ubuntu-latest
         steps:
             - name: show os
               run: echo "This job is running on an $RUNNER_OS runner"
