--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -16,6 +16,6 @@ jobs:
                 echo "Run ID: ${{ github.run_id }}"
                 echo "Run number: ${{ github.run_number }}"
             - name: Retrieve Variable
-              run: echo ${{ var.MY_VAR }}
+              run: echo ${{ vars.MY_VAR }}
 
 
