--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,4 +1,5 @@
 name: 06 - Contexts
+run-name: My custom workflow run name - ${{ runner.os }}
 on: 
     - push
     - workflow_dispatch
@@ -8,7 +9,7 @@ jobs:
         steps:
             - name: Display Information
               run: |
-                echo "Event name: ${{ github.action }}"
+                echo "Event name: ${{ github.event_name }}"
                 echo "Ref: ${{ github.ref }} "
                 echo "SHA: ${{ github.sha }}"
                 echo "Actor: ${{github.actor}}"
