--- a/.github/workflows/06-contexts.yaml
+++ b/.github/workflows/06-contexts.yaml
@@ -1,5 +1,8 @@
 name: 06 - Contexts
 run-name: 06 - Contexts | DEBUG - ${{ inputs.debug }}
+env:
+    MY_WORKFLOW_VAR: workflow
+    MY_OVERWRITTEN_VAR: workflow
 on: 
     push:
     workflow_dispatch:
@@ -10,6 +13,9 @@ on:
 
 jobs: 
     echo-data:
+        env:
+            MY_JOB_VAR: job
+            MY_OVERWRITTEN_VAR: job
         runs-on: ubuntu-latest
         steps:
             - name: Display Information
@@ -23,5 +29,15 @@ jobs:
                 echo "Run number: ${{ github.run_number }}"
             - name: Retrieve Variable
               run: echo ${{ vars.MY_VAR }}
+            - name: Print Env Variables
+              env:
+                MY_OVERWRITTEN_VAR: step
+              run: |
+                echo "Workflow env: ${{env.MY_WORKFLOW_VAR}} "
+                echo "Overwritten env: ${{env.MY_OVERWRITTEN_VAR}} "
+            - name: Print Env Variables
+              run: |
+                echo "Workflow env: ${{env.MY_WORKFLOW_VAR}} "
+                echo "Overwritten env: ${{env.MY_OVERWRITTEN_VAR}} " 
 
 
