--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,4 +1,5 @@
 name: 07 - Using Expressions
+run-name: 07 - Using Expressions | DEBUG - <'ON' if the debug input is true, 'OFF' otherwise>
 on: 
     push:
     workflow_dispatch:
@@ -11,15 +12,15 @@ jobs:
     echo:
         runs-on: ubuntu-latest
         steps: 
-            - name: debug Print start-up data
-              if: inputs.debug == true
+            - name: '[debug] Print start-up data'
+              if: ${{inputs.debug}}
               run: |
                 echo "Triggered by: ${{github.event_name}}"
                 echo "Branch: ${{github.ref_name}}"
                 echo "Commit SHA: ${{github.sha}}"
                 echo "Runner OS: ${{runner.os}}"
-            - name: debug Print when triggered from main
-              if: (inputs.debug == true && ${{github.ref_name}} == "main")
+            - name: '[debug] Print when triggered from main'
+              if: ${{inputs.debug && github.ref_name == 'main'}}
               run: echo "I was triggered from main"
             - name: Greeting
               run: echo "Hello, world"
