--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,7 +1,7 @@
 name: 07 - Using Expressions
-run-name: 07 - Using Expressions | DEBUG - <'ON' if the debug input is true, 'OFF' otherwise>
+run-name: 07 - Using Expressions | DEBUG - ${{ inputs.debug && 'on || 'off }}
 on: 
-    push:
+    # push:
     workflow_dispatch:
         inputs:
             debug:
