--- a/.github/workflows/07-expressions.yaml
+++ b/.github/workflows/07-expressions.yaml
@@ -1,5 +1,5 @@
 name: 07 - Using Expressions
-run-name: 07 - Using Expressions | DEBUG - ${{ inputs.debug && 'on || 'off }}
+run-name: 07 - Using Expressions | DEBUG - ${{ inputs.debug && 'on' || 'off' }}
 on: 
     # push:
     workflow_dispatch:
