--- a/.github/workflows/08-variables.yaml
+++ b/.github/workflows/08-variables.yaml
@@ -1,10 +1,11 @@
 name: 08 - Using Variables
 on: 
-    - push
-    - workflow_dispatch 
+    # push:
+    workflow_dispatch: 
 env:
     WORKFLOW_VAR: 'I am a workflow env var'
     OVERWRITTEN: 'I will be overwritten'
+    UNDEFINED_VAR_WITH_DEFAULT: "${{vars.UNDEFINED_VAR || 'default value' }}" 
 jobs:
     echo:
       runs-on: ubuntu-latest
@@ -26,7 +27,26 @@ jobs:
           env: 
             OVERWRITTEN: 'I have been overwritten at the step level'
           run: 'echo Step env var: ${{env.OVERWRITTEN}}'
+    echo2:
+        runs-on: ubuntu-latest
+        steps:
+            - name: print variables
+              run: |
+                echo "Repo var: ${{ vars.REPOSITORY_VAR }}"
+    echo-prod:
+        runs-on: ubuntu-latest
+        environment: prod
+        steps:
+            - name: print prod variables
+              run: |
+                echo "Repo var: ${{ vars.REPOSITORY_VAR }}"
+                echo "Environment var: ${{ vars.TARGET_VAR }}"
 
+    echo-undefined:
+        runs-on: ubuntu-latest
+        steps:
+            - name: print undefined
+              run: echo "undefined variable ${{env.UNDEFINED_VAR_WITH_DEFAULT}}"
 
 
 
