--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -6,6 +6,16 @@ jobs:
     echo1:
         runs-on: ubuntu-latest
         steps:
+            - name: Print PR title
+              run: echo "${{ github.event.pull_request.title }}"
+            - name: print PR labels
+              run: |
+                cat << EOF
+                ${{ toJson(github.event.pull_request.labels) }}
+                EOF
+            - name: Bug step
+              if: ${{ !cancelled() && contains(github.event.pull_request.title, 'fix') }} 
+              run: echo "I am a bug fix"
             - name: Failing step
               run: exit 1
             - name: I will be skipped
