--- a/.github/workflows/09-functions.yaml
+++ b/.github/workflows/09-functions.yaml
@@ -1,6 +1,6 @@
 name: 09 - Using Functions
 on: 
-    pull_request:
+    # pull_request:
     workflow_dispatch:
 jobs:
     echo1:
@@ -13,11 +13,12 @@ jobs:
                 cat << EOF
                 ${{ toJson(github.event.pull_request.labels) }}
                 EOF
+            - name: test
+              if: ${{!cancelled()}}
+              run: echo "test"
             - name: Bug step
               if: ${{ !cancelled() && contains(github.event.pull_request.title, 'fix') }} 
               run: echo "I am a bug fix"
-            - name: Failing step
-              run: exit 1
             - name: I will be skipped
               if: ${{ success() }}
               run: echo "I will be print if previous steps succesd. "
