--- a/.github/workflows/10-execution-flow.yaml
+++ b/.github/workflows/10-execution-flow.yaml
@@ -41,7 +41,9 @@ jobs:
               run: echo "Running load tests"
     deploy-prod:
         runs-on: ubuntu-latest
-        needs: e2e-tests
+        needs: 
+            - e2e-tests
+            - load-tests
         steps:
             - name: Deploying to prod
               run: echo "Deploying to prod..."
