--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -1,6 +1,6 @@
 name: 12 - Working with Outputs
 on:
-  push:
+#   push:
   workflow_dispatch:
     inputs:
         build-status:
@@ -23,6 +23,9 @@ jobs:
               run: |
                echo "$GITHUB_OUTPUT"
                echo "status=${{inputs.build-status}}" >> "$GITHUB_OUTPUT"
+               echo "output1=value1" >> "$GITHUB_OUTPUT"
+               echo "output2=value2" >> "$GITHUB_OUTPUT"
+               cat "$GITHUB_OUTPUT"
     deploy:
         needs: build
         runs-on: ubuntu-latest
