--- a/.github/workflows/12-outputs.yaml
+++ b/.github/workflows/12-outputs.yaml
@@ -26,6 +26,8 @@ jobs:
                echo "output1=value1" >> "$GITHUB_OUTPUT"
                echo "output2=value2" >> "$GITHUB_OUTPUT"
                cat "$GITHUB_OUTPUT"
+               echo "mistake=true" > "$GITHUB_OUTPUT"
+               cat "$GITHUB_OUTPUT"
     deploy:
         needs: build
         runs-on: ubuntu-latest
