--- a/.github/workflows/14-artifacts.yaml
+++ b/.github/workflows/14-artifacts.yaml
@@ -20,14 +20,14 @@ jobs:
             path: 14-artifacts/react-app/node_modules
             key: deps-node-modules-${{ hashFiles('14-artifacts/react-app/package-lock.json') }}
         - name: Install dependencies
-
+          if: steps.cache.outputs.cache-hit != 'true'
           run: npm ci
         - name: Unit tests
           run: npm run test
         - name: Build code
           run: npm run build
         - name: Upload build files
-          uses: actions/upload-artifact@v4
+          uses: actions/upload-artifact@v3
           with:
             name: app
             path: 14-artifacts/react-app/build
@@ -36,8 +36,10 @@ jobs:
       needs: test-build
       steps:
         - name: Download build files
-          uses: actions/download-artifact@v4
+          uses: actions/download-artifact@v3
           with:
             name: app
             path: build
+        - name: show folder structure
+          run: ls -R
 
