--- a/.github/workflows/15-matrices.yaml
+++ b/.github/workflows/15-matrices.yaml
@@ -4,11 +4,18 @@ jobs:
     backwards-compatibility:
         name: ${{matrix.os}}-${{matrix.node-version}}
         strategy:
+            fail-fast: false
             matrix:
                 node-version: [18.x, 20.x, 21.x]
                 os:
                     - ubuntu-latest
                     - windows-latest
+                include: 
+                    - os: ubuntu-latest
+                      node-version: 16.x
+                    - os: ubuntu-latest
+                      node-version: 21.x
+                      tag: experimental
         runs-on: ${{matrix.os}}    
 
         steps:
@@ -16,5 +23,12 @@ jobs:
               uses: actions/setup-node@v3
               with:
                 node-version: ${{matrix.node-version}}
+            - name: Fail if experimental
+              if: matrix.tag == 'experimental'
+              run: exit 1
             - name: Perform some tests
-              run: echo "Running tests on OS ${{matrix.os}} and NodeJS ${{matrix.node-version}}"
+              run: |
+                echo "Running tests on OS ${{matrix.os}} and NodeJS ${{matrix.node-version}}"
+                sleep 10
+            - name: Upload test results
+              run: echo "Uploading test results"
