--- a/.github/workflows/15-matrices.yaml
+++ b/.github/workflows/15-matrices.yaml
@@ -4,7 +4,7 @@ jobs:
     backwards-compatibility:
         name: ${{matrix.os}}-${{matrix.node-version}}
         strategy:
-            fail-fast: false
+            fail-fast: true
             matrix:
                 node-version: [18.x, 20.x, 21.x]
                 os:
