--- a/.github/workflows/15-matrices.yaml
+++ b/.github/workflows/15-matrices.yaml
@@ -33,7 +33,7 @@ jobs:
             - name: Upload test results
               run: echo "Uploading test results"
     include-example:
-        name: ${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}
+        name: ${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}-${{matrix.opacity}}
         runs-on: ubuntu-latest
         strategy: 
             matrix:
@@ -43,6 +43,7 @@ jobs:
                 include:
                     - color: red
                       shape: triangle
+                    - opacity: 50
         steps:
             - name: Dummy step
-              run: echo "${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}"
+              run: echo "${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}-${{matrix.opacity}}"
