--- a/.github/workflows/15-matrices.yaml
+++ b/.github/workflows/15-matrices.yaml
@@ -43,6 +43,10 @@ jobs:
                 include:
                     - color: red
                       shape: triangle
+                    - color: red
+                      opacity: 75
+                    - shape: circle
+                      opacity: 100
                     - opacity: 50
         steps:
             - name: Dummy step
