--- a/.github/workflows/15-matrices.yaml
+++ b/.github/workflows/15-matrices.yaml
@@ -49,7 +49,8 @@ jobs:
                     - shape: circle
                       opacity: 100
                 exclude:
-                    - opacity: 75
+                    - color: green
+                      shape: circle
         steps:
             - name: Dummy step
               run: echo "${{matrix.color}}-${{matrix.shape}}-${{matrix.size}}-${{matrix.opacity}}"
