feat(16 - Working with Environments)

--- a/.github/workflows/16-environments.yaml
+++ b/.github/workflows/16-environments.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
     echo:
         runs-on: ubuntu-latest
-        # environment: 
+        environment: ${{inputs.target-env}}
         env:
             my-env-value: ${{vars.MY_ENV_VALUE || 'default value'}}
         steps: 
