--- a/.github/workflows/16-environments.yaml
+++ b/.github/workflows/16-environments.yaml
@@ -1,21 +1,37 @@
 name: 16 - Working with Environments
-run-name: 16 - Working with Environments | env - ${{inputs.target-env}}
+# run-name: 16 - Working with Environments | env - ${{inputs.target-env}}
 on: 
     workflow_dispatch:
-        inputs:
-            target-env:
-                type: environment
-                default: staging
+        # inputs:
+        #     target-env:
+        #         type: environment
+        #         default: staging
 jobs:
-    echo:
+    deploy-staging:
         runs-on: ubuntu-latest
-        environment: ${{inputs.target-env}}
+        environment: staging
         env:
             my-env-value: ${{vars.MY_ENV_VALUE || 'default value'}}
         steps: 
-            - name: Echo vars
+            - name: Deploying to staging
               run: |
                 echo "Env variable: ${{env.MY_ENV_VALUE}}"
+    e2e-tests:
+        runs-on: ubuntu-latest
+        steps:
+            - name: E2E tests
+              run: echo "Running E2E"
+    deploy-prod:
+        runs-on: ubuntu-latest
+        needs: e2e-tests
+        environment: prod
+        env:
+            my-env-value: ${{vars.MY_ENV_VALUE || 'default value'}}
+        steps:
+            - name: Echo vars
+              run: echo "Deploying to prod"
+
+
 
             
         
