--- a/.github/actions/composite-cache-deps/action.yaml
+++ b/.github/actions/composite-cache-deps/action.yaml
@@ -28,4 +28,4 @@ runs:
       if: ${{ steps.cache.outputs.cache-hit != 'true' }}
       run: npm ci
       shell: bash
-      working-dir: ${{ inputs.working-dir }}
+      working-directory: ${{ inputs.working-dir }}
