--- a/.github/actions/composite-cache-deps/action.yaml
+++ b/.github/actions/composite-cache-deps/action.yaml
@@ -2,7 +2,7 @@ name: Cache Node and NPM Dependencies
 description: "This action allows to cache both Node and NPM dependencies based on the package-lock.json file."
 
 inputs:
-  Node-version:
+  node-version:
     description: Node version to uses
     default: 20.x
     required: true
@@ -17,7 +17,7 @@ runs:
     - name: Setup NodeJS version ${{ inputs.node-version }}
       uses: actions/setup-node@v3
       with:
-        Node-version: ${{ inputs.node-version }}
+        node-version: ${{ inputs.node-version }}
     - name: Cache dependencies
       id: cache
       uses: action/cache@v3
