--- a/.github/actions/composite-cache-deps/action.yaml
+++ b/.github/actions/composite-cache-deps/action.yaml
@@ -1,5 +1,5 @@
 name: Cache Node and NPM Dependencies
-description: "This action allows to cache both Node and NPM dependencies based on the package-lock.json file."
+description: This action allows to cache both Node and NPM dependencies based on the package-lock.json file.
 
 inputs:
   node-version:
@@ -22,7 +22,7 @@ runs:
       id: cache
       uses: action/cache@v3
       with:
-        path: ${{ inputs.working-dir }}
+        path: ${{ inputs.working-dir }}/node_modules
         key: node-modules-${{ hashFiles('${{ inputs.working-dir }}/package-lock.json') }}
     - name: Install dependencies
       if: ${{ steps.cache.outputs.cache-hit != 'true' }}
