--- a/.github/workflows/17-1-custom-actions-composite.yaml
+++ b/.github/workflows/17-1-custom-actions-composite.yaml
@@ -23,7 +23,7 @@ jobs:
               uses: ./.github/actions/composite-cache-deps
               with:
                 node-version: 20.x
-                working-directory: ${{ env.working-directory }}
+                working-dir: ${{ env.working-directory }}
             - name: test
               run: npm run test
               working-directory: ${{ env.working-directory }}
