--- a/.github/workflows/17-1-custom-actions-composite.yaml
+++ b/.github/workflows/17-1-custom-actions-composite.yaml
@@ -1,7 +1,7 @@
 name: 17 - 1 - Custom Actions - Composite
 run-name: 17 - 1 - Custom Actions - Composite | env - ${{ inputs.target-env }}.
 env:
-    working-directory: '17-custom-actions/react-app'
+    working-directory: 17-custom-actions/react-app
 on: 
     workflow_dispatch:
         inputs:
@@ -26,10 +26,8 @@ jobs:
                 working-dir: ${{ env.working-directory }}
             - name: test
               run: npm run test
-              working-directory: ${{ env.working-directory }}
             - name: Build
               run: npm run build
-              working-directory: ${{ env.working-directory }}
 
 
         
