--- a/.github/actions/composite-cache-deps/action.yaml
+++ b/.github/actions/composite-cache-deps/action.yaml
@@ -26,6 +26,7 @@ runs:
         key: node-modules-${{ hashFiles('${{ inputs.working-dir }}/package-lock.json') }}
     - name: Install dependencies
       if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-      run: npm ci
+      run: |
+        cd ${{ inputs.working-dir }}
+        npm ci
       shell: bash
-      working-directory: ${{ inputs.working-dir }}
