--- a/.github/workflows/17-1-custom-actions-composite.yaml
+++ b/.github/workflows/17-1-custom-actions-composite.yaml
@@ -1,5 +1,5 @@
 name: 17 - 1 - Custom Actions - Composite
-run-name: 17 - 1 - Custom Actions - Composite | env - ${{ inputs.target-env }}.
+run-name: 17 - 1 - Custom Actions - Composite | env - ${{ inputs.target-env }}
 env:
     working-directory: 17-custom-actions/react-app
 on: 
