--- a/.github/actions/composite-cache-deps/action.yaml
+++ b/.github/actions/composite-cache-deps/action.yaml
@@ -3,30 +3,38 @@ description: This action allows to cache both Node and NPM dependencies based on
 
 inputs:
   node-version:
-    description: Node version to uses
+    description: NodeJS version to use
     default: 20.x
     required: true
   working-dir:
     description: The working directory of the application
-    default: '.'
+    default: .
+    required: false
+  target-env:
+    description: '"dev" or "prod". Controls whether dev dependencies are installed'
+    default: dev
     required: false
 
-runs: 
+outputs:
+  installed-deps:
+    description: Whether dependencies were installed or not
+    value: ${{ steps.cache.outputs.cache-hit != 'true' }}
+
+runs:
   using: composite
   steps:
     - name: Setup NodeJS version ${{ inputs.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node-version }}
     - name: Cache dependencies
       id: cache
-      uses: action/cache@v3
+      uses: actions/cache@v3
       with:
         path: ${{ inputs.working-dir }}/node_modules
-        key: node-modules-${{ hashFiles('${{ inputs.working-dir }}/package-lock.json') }}
+        key: node-modules-${{ inputs.target-env }}-${{ hashFiles(format('{0}/{1}', inputs.working-dir, 'package-lock.json')) }}
     - name: Install dependencies
-      if: ${{ steps.cache.outputs.cache-hit != 'true' }}
-      run: |
-        cd ${{ inputs.working-dir }}
-        npm ci
+      if: steps.cache.outputs.cache-hit != 'true'
+      run: ${{ inputs.target-env == 'dev' && 'npm ci' || 'npm ci --omit=dev' }}
       shell: bash
+      working-directory: ${{ inputs.working-dir }}
