--- a/.github/workflows/17-2-custom-actions-js.yaml
+++ b/.github/workflows/17-2-custom-actions-js.yaml
@@ -1,6 +1,28 @@
 name: 17 - 2 - Custom Actions - JS
-run-name: 17 - 2 - Custom Actions - JS
-on: workflow_dispatch
+run-name: 17 - 2 - Custom Actions - JS | BB - ${{inputs.base-branch}} TB - ${{inputs.target-branch}} WD - ${{inputs.working-dir}}
+on: 
+    workflow_dispatch:
+        inputs:
+            base-branch:
+                description: "The branch used as the base for the dependency update checks"
+                default: main
+                required: false
+            target-branch:
+                description: "The branch from which the PR is created"
+                type: string
+                default: update-dependencies
+                required: false
+            working-dir: 
+                type: string
+                default: 17-custom-actions/react-app
+                description: "The working directory of the project to check for dependency updates"
+                required: true
+            gh-token: 
+                description: "Authentication token with repository access. Must have write access to contents and pull-requests"
+                required: true
+            debug:
+                description: "Whether the output debug messages to the console"
+                required: false
 jobs:
     dependency-update: 
         runs-on: ubuntu-latest
@@ -9,3 +31,7 @@ jobs:
               uses: actions/checkout@v4
             - name: Check for dependency updates
               uses: ./.github/actions/js-dependency-update
+              with: 
+                base-branch: ${{inputs.base-branch}}
+                target-branch: ${{inputs.target-branch}}
+                working-directory: ${{inputs.working-dir}}
