feat(17-custom-actions): parse and validate inputs

--- a/.github/actions/js-dependency-update/action.yaml
+++ b/.github/actions/js-dependency-update/action.yaml
@@ -4,12 +4,15 @@ inputs:
   base-branch:
     description: "The branch used as the base for the dependency update checks"
     default: main
+    type: string
     required: false
   target-branch:
     description: "The branch from which the PR is created"
     default: "update-dependencies"
+    type: string
     required: false
   working-directory: 
+    type: string
     description: "The working directory of the project to check for dependency updates"
     required: true
 #   gh-token: 
