feat(17-custom-actions): fix

--- a/.github/actions/js-dependency-update/action.yaml
+++ b/.github/actions/js-dependency-update/action.yaml
@@ -16,9 +16,10 @@ inputs:
 #   gh-token: 
 #     description: "Authentication token with repository access. Must have write access to contents and pull-requests"
 #     required: true
-#   debug:
-#     description: "Whether the output debug messages to the console"
-#     required: false
+  debug:
+    type: boolean
+    description: "Whether the output debug messages to the console"
+    required: false
 runs: 
   using: node20
   main: index.js
