--- a/.github/actions/js-dependency-update/action.yaml
+++ b/.github/actions/js-dependency-update/action.yaml
@@ -18,6 +18,7 @@ inputs:
 #     required: true
   debug:
     type: boolean
+    default: false
     description: "Whether the output debug messages to the console"
     required: false
 runs: 
