feat(added new custom action with docker)

--- a/.github/actions/docker-ping-url/action.yaml
+++ b/.github/actions/docker-ping-url/action.yaml
@@ -6,7 +6,7 @@ on:
       url:
         type: nstring
         description: "URL to ping"
-        required: false
+        required: true
       max_trials:
         required: false
         description: 'Maximum number of trials until action fails'
