feat(added new custom action with docker)

--- a/.github/workflows/17-3-custom-actions-docker.yaml
+++ b/.github/workflows/17-3-custom-actions-docker.yaml
@@ -4,7 +4,7 @@ on:
         inputs:
             url:
                 type: string
-                defaults: 'https://www.google.com'
+                default: 'https://www.google.com'
 jobs:
     ping-url:
         runs-on: ubuntu-latest
