--- a/.github/workflows/18-1-reusable-workflows.yaml
+++ b/.github/workflows/18-1-reusable-workflows.yaml
@@ -7,15 +7,18 @@ on:
                 required: true
         outputs:
             build-status:
-                value: ${{jobs.deploy.steps.build.build-status}}
+                value: ${{jobs.deploy.outputs.build-status}}
                 description: 'The status of the build process'
             url: 
-                value: ''
+                value: ${{jobs.deploy.outputs.url}}
                 description: 'The url of the deployed version'
             
 jobs:
     deploy:
         runs-on: ubuntu-latest
+        outputs: 
+            build-status: ${{steps.build.outputs.build_status}}
+            url: ${{steps.deploy.outputs.url}}
         steps:
             - name: Checkout repo
               uses: actions/checkout@v4
@@ -25,6 +28,7 @@ jobs:
                 echo "Building using directory ${{inputs.target-directory}}"
                 echo "build-status=successsuccess" >> "$GITHUB_OUTPUT"
             - name: Deploy
+              id: deploy
               run: |
                 echo "Deploying build artifacts"
                 ehco "url=https://www.google.com" >> $GITHUB_OUTPUT
