added new feat reusable workflows

--- a/.github/workflows/18-1-reusable-workflows.yaml
+++ b/.github/workflows/18-1-reusable-workflows.yaml
@@ -31,6 +31,6 @@ jobs:
               id: deploy
               run: |
                 echo "Deploying build artifacts"
-                ehco "url='https://www.google.com'" >> $GITHUB_OUTPUT
+                ehco "url='https://www.google.com'" >> "$GITHUB_OUTPUT"
 
               
