--- a/.github/workflows/19-1-concurrency.yaml
+++ b/.github/workflows/19-1-concurrency.yaml
@@ -2,7 +2,7 @@ name: 19 - 1 - Managing Concurrency
 on: 
     workflow_dispatch:
 concurrency: 
-    group: "${{ github.workflow }}-${{github.ref}}"
+    group: ${{ github.workflow }}-${{github.ref}}
 jobs:
     ping:    
         runs-on: ubuntu-latest
