--- a/.github/workflows/19-2-concurrency.yaml
+++ b/.github/workflows/19-2-concurrency.yaml
@@ -20,6 +20,6 @@ jobs:
             - name: Ping URL
               uses: ./.github/actions/docker-ping-url
               with: 
-                url: "www.google.com"
+                url: "https://www.google.com"
                 max_trials: 20
                 delay: 5
