--- a/.github/workflows/build-push-deploy.yaml
+++ b/.github/workflows/build-push-deploy.yaml
@@ -1,38 +1,27 @@
-# See 17-custom-actions/README.md for more information
-# about how to create and use custom actions in workflows.
-
-name: 17 - 3 - Custom Actions - Docker
-
+name: Build, Push and deploy to ECS
 on:
+  push:
+    branches:
+      - deployment-automation
   workflow_dispatch:
     inputs:
-      url:
+      environment:
         type: choice
         options:
-          - 'https://www.google.com'
-          - 'https://www.invalid-aidfghaidgfiazgd.com'
-          - 'invalid-aidfghaidgfiazgd'
-      max_trials:
-        description: Maximum trials until action fails.
-        default: '10'
+          - bvv
+          - will_be_in_future
+      release_tag:
+        description: 'Git release tag (leave empty to fetch all tags)'
         required: false
-      delay:
-        description: Delay in seconds between trials.
-        default: '5'
-        required: false
-
+        type: string
 jobs:
-  ping-url:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Ping URL
-        id: ping-url
-        uses: ./.github/actions/docker-ping-url
-        with:
-          url: ${{ inputs.url }}
-          max_trials: ${{ inputs.max_trials }}
-          delay: ${{ inputs.delay }}
-      - name: Print output from ping url
+      - name: checkout repo
+        uses: actions/checkout@v4
+      - name: Fetch all tags
         run: |
-          echo "URL reachable: ${{ steps.ping-url.outputs.url-reachable }}"
+          git fetch --tags
+          echo "Available tags:"
+          git tag
